created the 'find most optimal rule' method. needs investigation into how we can optimize for timing, because it's insanely slow. Maybe we apply the BnB to the recursion, to stop doing recursive calls once we realize it is impossible for a given tree to beat global optimum. some general code cleanup. next thing is working on some of the rendering stuff, rendering the rules as their own tree, and cleaning up the GUI?